@@ -4,27 +4,37 @@
       to avoid namespace polution and conflicts with libraries that use $ */
 $(document).ready(function() {
     if ($.fn.galleryView !== undefined) {
-        var $gallery_view = $('#galleryView'),
-            $gallery_parent, $gallery_class,
+        $.fn.eeaGalleryView = function(opts) {
+        return this.each(function(){ 
+            if ($.data(this, 'visited')) {
+                return;
+            }
+            var $this = $(this);
+            var $gallery_parent = $this.parent(),
+            $gallery_class = $gallery_parent[0].className,
             parent_width, parent_height,
             gallery_width, gallery_height;
-        if ($gallery_view.length ) {
-            $gallery_parent = $gallery_view.parent();
-            $gallery_class = $gallery_parent[0].className;
-
             parent_width = $gallery_parent.width() - 10;
             parent_height = Math.round((parent_width /4)*3);
             gallery_width = $gallery_class === 'gallery_fancybox_view' ? 640 : parent_width;
             gallery_height = $gallery_class === 'gallery_fancybox_view' ? 433 : parent_height;
-            $('#galleryView').galleryView({
+
+            var defaults = {
                 panel_width: gallery_width,
                 panel_height: gallery_height,
                 frame_width: 50,
                 frame_height: 50,
-                transition_speed: 350, 
+                transition_speed: 350,
                 transition_interval: 10000
-            });
-        }
+            };
+            var options = $.extend(defaults, opts);
+            
+            $this.galleryView(options);
+            $.data(this, 'visited', 'true');
+        });
+
+        };
+        $("#galleryView, .galleryView").eeaGalleryView();
     }
 });
 }(jQuery));
